2014-05-20  Tim Shen  <timshen91@gmail.com>

PR libstdc++/61227
	* include/bits/regex_compiler.h
	(_BracketMatcher<>::_M_add_character_class): Add negative character
	class support.
	* include/bits/regex_compiler.tcc (_BracketMatcher<>::_M_apply):
	Likewise.
	* testsuite/28_regex/algorithms/regex_match/ecma/char/quoted_char.cc:
	Add more testcases.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@210630 138bc75d-0d04-0410-961f-82ee72b054a4